--- a/index.html
+++ b/index.html
@@ -138,3 +138,65 @@
         <p>Quick project I made for fun. You can’t win.</p>
         <div class="embed">
           <iframe src="https://www.youtube.com/embed/2hGbSUb_NqI?mute=0&loop=1&playlist=2hGbSUb_NqI" allow="encrypted-media" allowfullscreen></ifr
+
+    <h2>About Me</h2>
+    <p>Outside of development, I’m a spiritual and curious person — I want to grow with others, learn from different cultures, and meet people from all walks of life.</p>
+    <h3 style="margin:8px 0 6px">Some of the games I love</h3>
+    <ul>
+      <li>Halo</li>
+      <li>Dishonored</li>
+      <li>Left 4 Dead</li>
+      <li>Hollow Knight</li>
+      <li>Slay the Spire</li>
+      <li>BioShock Infinite</li>
+      <li>Mass Effect</li>
+    </ul>
+
+    <h2>Other Skills</h2>
+    <p>Beyond game dev, I can tackle software, hardware, and practical projects.</p>
+    <ul>
+      <li><strong>Programming:</strong> C, C#, C++, Python, SolidWorks, Unity</li>
+      <li><strong>Engineering Tools:</strong>Calculus, IT</li>
+      <li><strong>Hardware Experience:</strong> Microcontrollers, Soldering, 3D Printing, Laser Cutting</li>
+      <li><strong>Life Skills:</strong> Recovery and life coach — 10 years, Inter/Intra-personal skills</li>
+    </ul>
+
+    <h2>Contact</h2>
+    <p>Email: <a class="btn secondary" href="mailto:ryanrookis@gmail.com">ryanrookis@gmail.com</a></p>
+    <p>GitHub: <a class="btn secondary" href="https://github.com/Uncrustable125" target="_blank" rel="noreferrer">Uncrustable125</a></p>
+
+    <footer>© <span id="y"></span> Ryan R • Switchable Light/Dark • Vanilla HTML/CSS</footer>
+  </div>
+
+  <script>
+    (function(){
+      const root = document.documentElement;
+      const btnAuto = document.getElementById('themeAuto');
+      const btnLight = document.getElementById('themeLight');
+      const btnDark  = document.getElementById('themeDark');
+      function setPressed(which){
+        btnAuto.setAttribute('aria-pressed', String(which==='auto'));
+        btnLight.setAttribute('aria-pressed', String(which==='light'));
+        btnDark .setAttribute('aria-pressed', String(which==='dark'));
+      }
+      function apply(mode){
+        if(mode==='light' || mode==='dark'){
+          root.setAttribute('data-theme', mode);
+          localStorage.setItem('theme-mode', mode);
+        }else{
+          root.setAttribute('data-theme', 'auto');
+          localStorage.removeItem('theme-mode');
+        }
+        setPressed(mode||'auto');
+      }
+      try{ apply(localStorage.getItem('theme-mode') || 'auto'); }catch(e){ apply('auto'); }
+      btnAuto.addEventListener('click', ()=>apply('auto'));
+      btnLight.addEventListener('click', ()=>apply('light'));
+      btnDark .addEventListener('click', ()=>apply('dark'));
+      const media = window.matchMedia('(prefers-color-scheme: dark)');
+      media.addEventListener('change', ()=>{ if(!localStorage.getItem('theme-mode')) root.setAttribute('data-theme', 'auto'); });
+      document.getElementById('y').textContent = new Date().getFullYear();
+    })();
+  </script>
+</body>
+</html>
