--- a/index.html
+++ b/index.html
@@ -20,15 +20,18 @@
     }
 
     *{box-sizing:border-box}
-    body{
-      margin:0;
-      font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      color: var(--text);
-      line-height:1.6;
-      background: linear-gradient(135deg, #2563eb 0%, #f8fafc 100%); /* blue → silver/white */
-      min-height: 100vh;
-      transition: background-color .25s ease, color .25s ease;
-    }
+body {
+  margin:0;
+  font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+  color: var(--text);
+  line-height:1.6;
+
+  /* teal-blue → white gradient */
+  background: linear-gradient(135deg, #4db6ac 0%, #ffffff 100%);
+  
+  min-height: 100vh;
+  transition: background-color .25s ease, color .25s ease;
+}
 
     .container{max-width:1000px; margin:0 auto; padding: clamp(20px, 3vw, 28px)}
     a{color:inherit; text-decoration:none}
