--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@ body {
   color: var(--text);
   line-height:1.6;
 
-  /* teal-blue → white gradient */
-  background: linear-gradient(135deg, #4db6ac 0%, #ffffff 100%);
+  background: linear-gradient(135deg, #3a7d7d 0%, #eaf6f6 100%);
+
   
   min-height: 100vh;
   transition: background-color .25s ease, color .25s ease;
