--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@ body {
   color: var(--text);
   line-height:1.6;
 
-  background: linear-gradient(135deg, #3a7d7d 0%, #eaf6f6 100%);
+background: 
+  linear-gradient(135deg, #d9f0ec 0%, #ffffff 100%),
+  url('https://www.transparenttextures.com/patterns/paper-fibers.png');
+background-size: cover, 400px 400px;
 
   
   min-height: 100vh;
