--- a/index.html
+++ b/index.html
@@ -26,10 +26,7 @@ body {
   color: var(--text);
   line-height:1.6;
 
-background: 
-  linear-gradient(135deg, #d9f0ec 0%, #ffffff 100%),
-  url('https://www.transparenttextures.com/patterns/paper-fibers.png');
-background-size: cover, 400px 400px;
+  background: linear-gradient(135deg, #3a7d7d 0%, #eaf6f6 100%);
 
   
   min-height: 100vh;
@@ -87,6 +84,7 @@ background-size: cover, 400px 400px;
   </style>
 </head>
 <body>
+  <div class="content-box">
   <div class="container">
     <header class="reveal">
       <h1>Ryan R</h1>
@@ -105,6 +103,7 @@ background-size: cover, 400px 400px;
         <a class="btn" href="mailto:ryanrookis@gmail.com">Contact Me</a>
         <a class="btn secondary" href="https://github.com/uncrustable125" target="_blank" rel="noreferrer">GitHub</a>
       </div>
+	  </div>
     </header>
 
     <h2>Projects</h2>
